--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
+    "vue-share-social": "^0.3.2",
+    "vue-social-sharing": "^2.4.1",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
   },
