--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "moment": "^2.24.0",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
     "vue-share-social": "^0.3.2",
     "vue-social-sharing": "^2.4.1",
     "vuetify": "^1.3.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@mdi/font": "^3.4.93",
